gccida/c3/find_reload_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/reload1.c:2313:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)chain->rld[i].reg_rtx)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/reload1.c:2314:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)chain->rld[i].reg_rtx)] == MODE_COMPLEX_FLOAT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/reload1.c:2333:61: error: ISO C requires a named parameter before '...'
specqsort( ( char *)reload_order, n_reloads, 2, ( int ( *)( ...))reload_reg_class_lower); 
                                                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reload_regs/src/obj/reload1.o] Error 1
